// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Analysis Builder render 1`] = `
<div>
  <div
    class="event-analysis-builder-root d-flex"
  >
    <div
      class="analysis-section-root"
    >
      <div
        class="section-header"
      >
        Analyze
      </div>
      <div
        class="analysis-list"
      >
        <button
          class="button-root btn btn-primary"
          type="button"
        >
          <svg
            class="icon-root lexicon-icon lexicon-icon-plus"
            viewBox=""
          >
            <use
              xlink:href="/o/osb-faro-web/dist/sprite.svg#plus"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Event Analysis Builder render with filters & breakdowns 1`] = `
<div>
  <div
    class="event-analysis-builder-root d-flex"
  >
    <div
      class="analysis-section-root"
    >
      <div
        class="section-header"
      >
        Analyze
      </div>
      <div
        class="analysis-list"
      >
        <div
          class="chip-root d-flex align-items-center justify-content-between analysis-chip-root"
        >
          <div
            class="event-name"
          >
            Article Views
          </div>
          <button
            class="button-root btn btn-unstyled remove-button"
            type="button"
          >
            <svg
              class="icon-root lexicon-icon lexicon-icon-times-circle"
              viewBox=""
            >
              <use
                xlink:href="/o/osb-faro-web/dist/sprite.svg#times-circle"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="breakdown-section-root flex-grow-1"
    >
      <div
        class="section-header"
      >
        Breakdown By
      </div>
      <div
        class="breakdown-container d-flex align-items-center"
      >
        <div
          class="breakdown-list d-flex align-items-center"
        >
          <div
            class="breakdown-chip-container"
          >
            <div
              class="chip-root d-flex align-items-center justify-content-between breakdown-chip-root"
            >
              <div
                class="drag-handle"
                draggable="true"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-drag"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#drag"
                  />
                </svg>
              </div>
              <div
                class="sticker"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-text"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#text"
                  />
                </svg>
              </div>
              <div>
                <div
                  class="attribute-label"
                >
                  Event
                </div>
                <div
                  class="attribute-value"
                >
                  Article Title
                </div>
              </div>
              <button
                class="button-root btn btn-unstyled remove-button"
                type="button"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-times-circle"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#times-circle"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="breakdown-chip-container"
          >
            <div
              class="chip-root d-flex align-items-center justify-content-between breakdown-chip-root"
            >
              <div
                class="drag-handle"
                draggable="true"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-drag"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#drag"
                  />
                </svg>
              </div>
              <div
                class="sticker"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-text"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#text"
                  />
                </svg>
              </div>
              <div>
                <div
                  class="attribute-label"
                >
                  Event | Job Title
                </div>
                <div
                  class="attribute-value"
                >
                  is "Stuff"
                </div>
              </div>
              <button
                class="button-root btn btn-unstyled remove-button"
                type="button"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-times-circle"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#times-circle"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div>
          <button
            class="button-root btn btn-light add-breakdown btn-outline-borderless btn-sm"
            type="button"
          >
            <svg
              class="icon-root lexicon-icon lexicon-icon-plus"
              viewBox=""
            >
              <use
                xlink:href="/o/osb-faro-web/dist/sprite.svg#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
